2010-06-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/advice.el (ad-compile-function):
	Define warning-suppress-types before we let-bind it (bug#6275).

	* vc-dispatcher.el: Rename mode-line-hook to vc-mode-line-hook;
	declare it, make it buffer-local and permanent-local (bug#6324).
	(vc-resynch-window): Adjust name.
	* vc-hooks.el (vc-find-file-hook): Adjust name.

2010-06-09  Michael Albinus  <michael.albinus@gmx.de>

	* net/notifications.el (notifications-notify): Fix docstring.

2010-06-09  Juanma Barranquero  <lekktu@gmail.com>

	Update to Unicode 6.0.0 beta.
	* international/charprop.el: Update copyright.
	* international/mule-cmds.el (ucs-names): Update character ranges.
	* international/uni-bidi.el:
	* international/uni-category.el:
	* international/uni-combining.el:
	* international/uni-comment.el:
	* international/uni-decimal.el:
	* international/uni-decomposition.el:
	* international/uni-digit.el:
	* international/uni-lowercase.el:
	* international/uni-mirrored.el:
	* international/uni-name.el:
	* international/uni-numeric.el:
	* international/uni-old-name.el:
	* international/uni-titlecase.el:
	* international/uni-uppercase.el: Regenerate.

2010-06-09  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/smie.el (comment-string-strip): Declare function.
	(smie-precs-precedence-table): Fix typo in docstring.

	* vc-mtn.el (log-edit-extract-headers): Declare function.

	* vc-hg.el (log-edit-extract-headers): Remove duplicate declaration.

	* net/notifications.el (dbus-register-signal): Declare function.
	(notifications-notify): Fix typos and reflow docstring.

2010-06-09  Dan Nicolaescu  <dann@ics.uci.edu>

	Improve VC create/retrieve tag/branch.
	* vc.el (vc-create-tag): Do not read the directory name for VCs
	with repository revision granularity.  Adjust the tag/branch
	prompt.  Reset VC properties.
	(vc-retrieve-tag): Do not read the directory name for VCs
	with repository revision granularity.  Reset VC properties.
